--- a/AppMAUI/AppShell.xaml
+++ b/AppMAUI/AppShell.xaml
@@ -4,7 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:AppMAUI"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Disabled"
+    Title="AnimalCafeApiMaui">
 
     <TabBar>
         <ShellContent Title="Home" 
@@ -20,7 +21,7 @@
         <ShellContent
                       Title="Clients"
                       ContentTemplate="{DataTemplate local:ClientPage}"
-                      Route="CLientPage" />
+                      Route="ClientPage" />
     </TabBar>
 
 </Shell>
